--- a/BSCS23031_style.css
+++ b/BSCS23031_style.css
@@ -33,7 +33,7 @@ img
 {
     border:18px;
     border-color: midnightblue;
-    border-style:inset;
+    border-style:double;
     border-radius: 100%;
 }
 h1
@@ -48,6 +48,6 @@ p
     font-size:larger;
     font-weight: bolder;
     text-align:center;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color:rgb(36, 25, 59);
 }
